# STINGTOOLS

./: .dockerignore  .gitattributes  .gitignore  .mcp.json  20260423_sting_tag_config_142_v6_0_per_family.xlsx  20260423_sting_tag_config_v6_0_DesignConstruction.xlsx  20260423_sting_tag_config_v6_0_Handover.xlsx  BRANCH_CONSOLIDATION_PROMPT.md  CLAUDE.md  CONTRACT_ALIGNMENT.md  CONTRACT_ALIGNMENT_PROMPTS.md  DEDUPE_AUDIT.md  DEPLOY.md  HEALTHCARE_WIRING.md  INTEROP_PLAN.md  KUT_BIM_MANAGER_PLAYBOOK_INTERNAL_STINGTOOLS.docx  MERGE_SUMMARY.md  MISWIRE_AUDIT.md  MULTI_HOST_BONSAI_INSTALLABLE_PROMPT.md  MULTI_HOST_BONSAI_LANDING_PROMPT.md  MULTI_HOST_BUILD_PROMPT.md  MULTI_HOST_INTEGRATION_PROMPT.md  MULTI_HOST_PHASE_A_PROMPT.md  ORPHANS_AUDIT.md  PARAM_REUSE_REPORT.md  PHASE3_NOTES.md  PROGRESS.md  Performance_AuditNotes.md  Planscape_Cost_Model.xlsx  Planscape_Tier_Budget.xlsx  REORG_PLAN.md  REVIEW_LOG.md  SEED_FOLLOWUP.md  SILENT_BUTTONS_TODO.md  StingTools.addin  StingTools_Enhancement.docx  TAGGING_REFERENCE.md  TIER_VARIATION_MATRIX.md  Tests_V6SmokeTest.md  build.bat  (+18 more)
.claude/: settings.local.json
.github/: labeler.yml
CompiledPlugin/: StingTools.addin  StingTools.deps.json
Families/: README.md
GUIDES/: KUT_BEP_TEMPLATE.md  KUT_BIM_MANAGER_PLAYBOOK.md  KUT_MIDP_TEMPLATE.csv
Planscape/: .env.example  .eslintrc.json  .gitignore  app.config.js  app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
Planscape.Desktop/: electron-builder.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.main.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
Planscape.Edge/: EdgeOptions.cs  Planscape.Edge.csproj  Program.cs  README.md  ServerForwarder.cs  StoreAndForwardQueue.cs  Worker.cs  appsettings.json
Planscape.Server/: .dockerignore  .env.local.example  .gitignore  DEPLOYMENT.md  PRICING_COMPARISON.md  Planscape.sln  backup_planscape_20260528_155044.sql  dev-up.sh  render.yaml
StingBIM.Server/: StingBIM.Server.sln  StingBIM.sln  render.yaml
StingBIM.Standards/: AECCalculations.cs  GENERATE_ALL_STANDARDS.sh  ProjectStandardsManager.cs  StandardsAPI.cs  StandardsAPI_ResultClasses.cs  StingBIM.Standards.csproj
StingBridge/: BUILD.md  LICENSE.txt  QUICKSTART.md  StingBridge.csproj  StingBridge.spec  __init__.py  _core.py  _pyinstaller_entry.py  bridge.py  config.py  get_project_id.py  make_test_ifc.py  pyproject.toml  requirements.txt
StingBridge/archicad/: client.py  element_types.py  host_adapter.py
StingBridge/planscape/: client.py
StingBridge/src/ArchiCAD/: ArchiCADLiveLink.cs  ArchiCADWorkflowAdapter.cs  PlanscapeCloudPush.cs
StingBridge/src/IFC/: DropFolderImportEventHandler.cs  IfcDropWatcher.cs  IfcRevitImporter.cs
StingBridge/sync/: engine.py  ifc_reconcile.py  property_writer.py  push_chunker.py  seq_minter.py  token_mapper.py
StingBridge/tests/: e2e_handoff_provisioning.py  e2e_ifc_pull_reconcile.py  e2e_pull_reconcile.py  e2e_seq_minting.py  test_auth_refresh.py  test_config.py  test_host_adapter.py  test_hot_folder.py  test_ifc_globalid_stability.py  test_ifc_ingest.py  test_ifc_pull_reconcile.py  test_ifc_seq_idempotency.py  test_push_chunker.py  test_seq_minting.py  test_token_auth.py  test_token_equivalence.py  test_zone_index.py
StingBridge/watch/: hot_folder.py  ifc_watcher.py
StingTools.ArchiCAD/: CMakeLists.txt  README.md
StingTools.ArchiCAD/include/: PlanscapeClient.hpp
StingTools.ArchiCAD/src/: StingPlanscapeAddon.cpp
StingTools.Boq.Tests/: BiogenicCarbonTests.cs  BmsValuationTests.cs  BoqTotalsTests.cs  BoqUnitsTests.cs  ClassificationPolicyTests.cs  CompoundTakeoffTests.cs  CsiNrm2BridgeTests.cs  ErpFormatsTests.cs  FfeTreatmentTests.cs  FormulaSelfRefTests.cs  IfcGuidEncoderTests.cs  MaterialKeyCanonicaliserTests.cs  MaterialLookupParserTests.cs  MaterialLookupPopulateTests.cs  MaterialRatioMat2Tests.cs  MeasuredAdditionTests.cs  OmniClassMapTests.cs  RateCurrencyTests.cs  RatePolicyTests.cs  Rc2AlignmentTests.cs  SlabConcreteCalculatorTests.cs  SlabSystemTests.cs  SpecStoreTests.cs  StingTools.Boq.Tests.csproj  TimberCarbonSplitTests.cs  VoidSlabAndBeamTests.cs  WasteFactorTests.cs  WasteTableTests.cs
StingTools.Clash.Tests/: BcfMarkupBuilderTests.cs  ClashGrouperTests.cs  ClashHistoryTests.cs  ClashIdentityTests.cs  ClashMatrixTests.cs  ClashRuleEngineTests.cs  ClashWireupRegressionTests.cs  MollerSatTests.cs  ResolutionHeuristicsTests.cs  StingTools.Clash.Tests.csproj
StingTools.Connectivity.Tests/: Program.cs  StingTools.Connectivity.Tests.csproj
StingTools.Cost.Tests/: CostBasisReconciliationTests.cs  CostPocoTests.cs  CpmTests.cs  DayworkTests.cs  EvmPeriodTests.cs  FluctuationsTests.cs  Pm3LifecycleTests.cs  Pm8DeliveryTests.cs  SharedHelpersTests.cs  StingTools.Cost.Tests.csproj  VariationLiabilityRulesTests.cs
StingTools.Dynamo/: DESIGN.md  README.md  StingTools.Dynamo.csproj  pkg.json
StingTools.Headless/: HeadlessRunner.cs  StingTools.Headless.csproj
StingTools.LicenseIssuer/: Program.cs  StingTools.LicenseIssuer.csproj
stingtools-core/python/: README.md  pyproject.toml
stingtools-core/python/stingtools_core/: __init__.py  __main__.py  exceptions.py  paths.py  substrate.py
stingtools-core/python/stingtools_core/enums/: __init__.py  loader.py  models.py
stingtools-core/python/stingtools_core/hosts/: __init__.py  adapter.py  archicad.py  ifc_file.py  inference.py
stingtools-core/python/stingtools_core/ids/: __init__.py  runner.py
stingtools-core/python/stingtools_core/planscape/: __init__.py  audit_log.py  client.py
stingtools-core/python/stingtools_core/psets/: __init__.py  loader.py  models.py
stingtools-core/python/stingtools_core/spatial/: __init__.py  check.py
stingtools-core/python/stingtools_core/sync/: __init__.py  pull.py  reconcile.py
stingtools-core/python/stingtools_core/tag_grammar/: __init__.py  builder.py  validator.py
stingtools-core/python/tests/: test_adapter_boundary.py  test_hosts.py  test_smoke.py  test_status_propagation.py  test_substrate.py  test_sync_reconcile.py
(+4363 files in other folders)
